# TimeDomainTHz

./: CMakeLists.txt  Makefile  README.md
lib_src/: fields.cpp  fields.h  global.h  screen.cpp  screen.h  vector.cpp  vector.h
run/: pbs.tdt  run.tdt
scripts/: CreateGaussianSource.ipynb  CreateOffAxisParabola.ipynb  MeshFields.py  MeshedFields.py  OTR_Screen.py  OffAxisParabola.ipynb  PlaneWaveAngledScreen.ipynb  PropagateAngledScreen.ipynb  PropagationDev.ipynb  TimeDomainField.py  Untitled.ipynb  pbs  pbs-short  plot_PowerDensity.py  plot_Screen_TD.py  plot_Slice.py  run_TDT  run_TDT_short
src/: GaussianWavePacket.cpp  Propagate.cpp  PropagateStraight.cpp  Reflection.cpp  TiltedScreen.cpp  fields.cpp  fields.h  screen.cpp  screen.h  vector.cpp  vector.h
